# etf-compare

./: .gitignore  Makefile  README.md  app.py  debug_html.py  pyproject.toml  requirements.txt  sample_page_1.html  sample_page_2.html  scraper.py  utils.py  visualization.py
attached_assets/: Pasted-import-requests-from-bs4-import-BeautifulSoup-import-pandas-as-pd-import-re-def-scrape-lazyportfoli-1745789451929.txt
