[project]
name = "etf-compare"
version = "0.1.0"
description = "ETF Comparison Tool for analyzing and comparing financial metrics of ETFs and lazy portfolios"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
